fix css alignment of main

--- a/src/app.css
+++ b/src/app.css
@@ -45,7 +45,6 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
   margin: 0 auto;
   text-align: center;
 }
